se acomodan todas las img de libros dentro de la carpeta libros, se cambian las rutas y img de mago y user se paso a la carpeta recursos

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -170,7 +170,7 @@
       <!-- LIBRO 1 -->
       <article class="book">
         <div class="book-content">
-          <img class="book-cover" src="/images/el-hobbit.jpg" alt="Portada de 'El temor de un hombre sabio'">
+          <img class="book-cover" src="/images/libros/el-hobbit.jpg" alt="Portada de 'El Hobbit'">
           <h3>El Hobbit</h3>
           <h5>J. R. R. Tolkien</h5>
           <!-- Botón de comprar -->
@@ -180,7 +180,7 @@
       <!-- LIBRO 2 -->
       <article class="book">
         <div class="book-content">
-          <img class="book-cover" src="/images/ElSeñorDeLosAnillos_LaComunidadDelAnillo.jpg" alt="Portada de 'La Morada - El exilio - El Refugio'">
+          <img class="book-cover" src="/images/libros/ElSeñorDeLosAnillos_LaComunidadDelAnillo.jpg" alt="Portada de 'El señor de los anollos, la comunidad del anillo'">
           <h3>El señor de los Anillos</h3>
           <h5>J. R. R. Tolkien</h5>
           <!-- Botón de comprar -->
@@ -191,7 +191,7 @@
       <!-- LIBRO 3 -->
       <article class="book">
         <div class="book-content">
-          <img class="book-cover" src="/images/los-crimenes-de-grindelwald.jpg" alt="Portada de 'Corona de Espadas'">
+          <img class="book-cover" src="/images/libros/los-crimenes-de-grindelwald.jpg" alt="Portada de 'Los crimenes de Grindelwald'">
           <h3>Los crimenes de Grindelwald</h3>
           <h5>J. K. Rowling</h5>
           <!-- Botón de comprar -->
