--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -68,7 +68,7 @@
         <!-- MAGO PARA REGISTRARSE -->
         <div class="wizard">    
              <a href="/login" class="wizard__image">
-                 <img src="images/wizard-icon.png" width="20px" alt="">
+                 <img src="images/recursos/wizard-icon.png" width="20px" alt="">
              </a>
              <a href="/login" class="wizard__login">
                 <p>Ingresar / </p>
