--- a/views/productDetail.ejs
+++ b/views/productDetail.ejs
@@ -28,7 +28,7 @@
           <h2 class="item__title">Animales Fantasticos</h2>
           <figure class="item__img">
             <img
-              src="images/books/AnimalesFantasticosYDondeEncontrarlos.jpg"
+              src="images/libros/AnimalesFantasticosYDondeEncontrarlos.jpg"
               alt=""
             />
           </figure>
@@ -72,19 +72,19 @@
           <div class="box__books"></div>
           <h2 class="item__title item--secondary__title">Productos Relacionados</h2>
           <figure class="books">
-            <img class="books__img" src="images/books/ElSeñorDeLosAnillos_LaComunidadDelAnillo.jpg" alt="">
+            <img class="books__img" src="images/libros/ElSeñorDeLosAnillos_LaComunidadDelAnillo.jpg" alt="">
               <a href="" class="books__title">El señor de los anillos - La comunidad del anillo</a>
           </figure>
           <figure class="books">
-            <img class="books__img" src="images/books/AnimalesFantasticosYDondeEncontrarlos.jpg" alt="">
+            <img class="books__img" src="images/libros/AnimalesFantasticosYDondeEncontrarlos.jpg" alt="">
               <a class="books__title" href="">Animales fantasticos - y donde encontrarlos</a>
           </figure>
           <figure class="books">
-            <img class="books__img" src="images/books/harry-potter-y la camara secreta (1).png" alt="">
+            <img class="books__img" src="images/libros/harry-potter-y-la-camara-secreta.png" alt="">
               <a class="books__title" href="">Harry Potter - y la camara secreta</a>
           </figure>
           <figure class="books">
-            <img class="books__img" src="images/books/1567730915_20.jpg" alt="">
+            <img class="books__img" src="images/libros/harry-potter-y-el-caliz-de-fuego.jpg" alt="">
               <a class="books__title" href="">Harry Potter - y el caliz de fuego</a>
           </figure>
         </article>
