--- a/views/shoppingCart.ejs
+++ b/views/shoppingCart.ejs
@@ -38,7 +38,7 @@
         <!-- TODOS LOS PRODUCTOS A COMPRAR -->
         <article class="conteiner-item">   
             <div class="item-left">
-                <img class="buy-image" src="images/harry-potter-y-el-caliz-de-fuego.jpg" alt="">
+                <img class="buy-image" src="images/libros/harry-potter-y-el-caliz-de-fuego.jpg" alt="">
                 <p>Harry Potter y el caliz de fuego</p>
             </div>
             <div class="item-right">   
@@ -92,25 +92,25 @@
        
         <article class="recommended-item">
             <a href="">
-                <img class="recommended-img"src="images/AnimalesFantasticosYDondeEncontrarlos.jpg" alt="">
+                <img class="recommended-img"src="images/libros/AnimalesFantasticosYDondeEncontrarlos.jpg" alt="">
                 <p>Animales Fantasticos y donde encontrarlos</p>
             </a>    
         </article>
         <article class="recommended-item">
             <a href="">
-                <img class="recommended-img" src="images/ElSeñorDeLosAnillos_LaComunidadDelAnillo.jpg" alt="">
+                <img class="recommended-img" src="images/libros/ElSeñorDeLosAnillos_LaComunidadDelAnillo.jpg" alt="">
                 <p>El Señor de los anillos La comunidad del Anillo</p>
             </a>
         </article>
         <article class="recommended-item">
             <a href="">
-                <img class="recommended-img" src="images/harry-potter-y-la-camara-secreta.png" alt="">
+                <img class="recommended-img" src="images/libros/harry-potter-y-la-camara-secreta.png" alt="">
                 <p>Harry Potter y la Camara Secreta</p>
             </a>
         </article>
         <article class="recommended-item">
             <a href="">
-                <img class="recommended-img" src="images/los-crimenes-de-grindelwald.jpg" alt="">
+                <img class="recommended-img" src="images/libros/los-crimenes-de-grindelwald.jpg" alt="">
                 <p>Los Crimenes de Grindelwald</p>
             </a>
         </article>
