--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,25 +1,8 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SpellBook</title>
-    <!-- GOOGLE FONT Roboto-->
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
-    <!-- Berkshire Swash -->
-    <link href="https://fonts.googleapis.com/css2?family=Berkshire+Swash&display=swap" rel="stylesheet">
-    <!-- FONT AWESOME -->
-    <script src="https://kit.fontawesome.com/fc00004fb4.js" crossorigin="anonymous" ></script>
-
-    <!-- NORMALIZE Y ESTILOS -->
-    <link rel="stylesheet" href="/stylesheets/styles.css">
-    <!-- CSS Login -->
-    <link rel="stylesheet" href="/stylesheets/login.css"/>
-  </head>
+    <!-- HEAD -->
+    <%- include('./partials/head') %>
   <body>
-
 <!-- HEADER -->
 <%- include('./partials/header') %> 
 
