--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,27 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SpellBook</title>
-    <!-- GOOGLE FONT Roboto-->
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
-    <!-- Berkshire Swash -->
-    <link href="https://fonts.googleapis.com/css2?family=Berkshire+Swash&display=swap" rel="stylesheet">
-    <!-- LINK DE FONT AWESONE  -->
-    <script src="https://kit.fontawesome.com/fc00004fb4.js"crossorigin="anonymous"></script>
-    <script src="https://kit.fontawesome.com/29f0a39c3c.js" crossorigin="anonymous"></script>
-      
-    <!-- NORMALIZE Y ESTILOS -->
-    <link rel="stylesheet" href="/stylesheets/styles.css">
-    <!-- LINK CSS DEL HEADER -->
-    <link rel="stylesheet" href="stylesheets/header.css">
-    <!-- LINK DEL REGISTRO -->
-    <link rel="stylesheet" href="stylesheets/register.css">
-</head>
-  
+  <!-- HEAD -->
+  <%- include('./partials/head') %>
 <!-- BODY CON IMAGEN DE FONDO -->
 <body class="background-image">
 
