--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -148,6 +148,19 @@ h4 {
   height: 300px;
   box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.4);
   border-radius: 3px;
+  transition: 0.5s;
+}
+
+.month-selection .book .book-content .book-cover:hover{
+  
+  -webkit-transform:scale(1);transform:scale(1.02);
+  transition-property: all;
+  transition-duration: 0.5s;
+  transition-timing-function: ease-in-out;
+  box-shadow: 1em 1em 4rem 0px var(--color-azulOscuro), -1em -1em 4rem 0px var(--color-violeta);
+  cursor: pointer;
+
+  
 }
 
 .month-selection {
@@ -171,7 +184,7 @@ h3, h5 {
 }
 
 h5 {
-  margin: 0.5rem auto 2rem auto;
+  margin: 0.5rem auto 1rem auto;
   font-size: 0.9rem;
   color: var(--color-violeta);
 }
@@ -184,6 +197,21 @@ h5 {
   flex-wrap: nowrap;
   
 }
+.month-selection .book .book-content .book-price {
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 15px;
+  font-size: var(--discounts-descriptions);
+  align-items: baseline;
+  
+}
+
+.month-selection .book .book-content .book-price i {
+  margin-right: 5px;
+  color: var(--color-violeta);
+}
+
+
 
 .book .book-content input {
   font-family: var(--font-roboto);
@@ -291,6 +319,8 @@ h5 {
 .secure-buy-icon {
   font-size: 35px;
 }
+
+
 
 
 /* Media queries */
