--- a/views/index.ejs
+++ b/views/index.ejs
@@ -109,6 +109,10 @@
           <img class="book-cover" src="/images/Libros/el temor de un hombre sabio.jpg" alt="Portada de 'El temor de un hombre sabio'">
           <h3>El Temor de un Hombre Sabio</h3>
           <h5>Patrick Rothfus</h5>
+        <div class="book-price">
+          <i class="fas fa-dollar-sign"></i>
+          <p>1200</p>
+        </div>
           <!-- Botón de comprar -->
           <div class="shopping-btn"><input type="button" value="Comprar"></div>
         </div>
@@ -119,6 +123,10 @@
           <img class="book-cover" src="/images/Libros/la morada - el exilio - el refugio.jpg" alt="Portada de 'La Morada - El exilio - El Refugio'">
           <h3>La Morada - El Exilio - El Refugio</h3>
           <h5>R. A. Salvatore</h5>
+          <div class="book-price">
+            <i class="fas fa-dollar-sign"></i>
+            <p>1200</p>
+          </div>
           <!-- Botón de comprar -->
           <div class="shopping-btn"><input type="button" value="Comprar"></div>
           
@@ -130,6 +138,10 @@
           <img class="book-cover" src="/images/Libros/corona de espadas.jpg" alt="Portada de 'Corona de Espadas'">
           <h3>Corona de Espadas</h3>
           <h5>Robert Jordan</h5>
+          <div class="book-price">
+            <i class="fas fa-dollar-sign"></i>
+            <p>1200</p>
+          </div>
           <!-- Botón de comprar -->
           <div class="shopping-btn"><input type="button" value="Comprar"></div>
           
@@ -151,6 +163,11 @@
           <img class="book-cover" src="/images/libros/el-hobbit.jpg" alt="Portada de 'El Hobbit'">
           <h3>El Hobbit</h3>
           <h5>J. R. R. Tolkien</h5>
+          <div class="book-price">
+            <i class="fas fa-dollar-sign"></i>
+            <p>1200</p>
+          </div>
+
           <!-- Botón de comprar -->
           <div class="shopping-btn"><input type="button" value="Comprar"></div>
         </div>
@@ -161,6 +178,10 @@
           <img class="book-cover" src="/images/libros/ElSeñorDeLosAnillos_LaComunidadDelAnillo.jpg" alt="Portada de 'El señor de los anollos, la comunidad del anillo'">
           <h3>El señor de los Anillos</h3>
           <h5>J. R. R. Tolkien</h5>
+          <div class="book-price">
+            <i class="fas fa-dollar-sign"></i>
+            <p>1200</p>
+          </div>
           <!-- Botón de comprar -->
           <div class="shopping-btn"><input type="button" value="Comprar"></div>
           
@@ -172,6 +193,11 @@
           <img class="book-cover" src="/images/libros/los-crimenes-de-grindelwald.jpg" alt="Portada de 'Los crimenes de Grindelwald'">
           <h3>Los crimenes de Grindelwald</h3>
           <h5>J. K. Rowling</h5>
+          <div class="book-price">
+            <i class="fas fa-dollar-sign"></i>
+            <p>1200</p>
+          </div>
+          
           <!-- Botón de comprar -->
           <div class="shopping-btn"><input type="button" value="Comprar"></div>
           
