resolviendo ruteo de imagenes, head  y scrips

--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -16,6 +16,6 @@
     <!-- NORMALIZE Y ESTILOS -->
     <link rel="stylesheet" href="/stylesheets/styles.css">
     <!-- LINK CSS DEL HEADER -->
-    <link rel="stylesheet" href="stylesheets/header.css">
+    <link rel="stylesheet" href="/stylesheets/header.css">
     <link rel="stylesheet" href="/stylesheets/normalize.css">
 </head>
