--- a/views/signUp.ejs
+++ b/views/signUp.ejs
@@ -8,7 +8,7 @@
 
     <aside class="aside">
         <figure class="logo-sticker">
-          <img src="images/Diseño y Logo/Logo para fondos oscuros.png" alt="" class="logo-sticker__img">
+          <img src="/images/Diseño y Logo/Logo para fondos oscuros.png" alt="" class="logo-sticker__img">
         </figure>
         <form action="" method="POST" class="form">
           <div class="box">
@@ -59,6 +59,6 @@
   <!-- FOOTER -->
   <%- include('./partials/footer') %>
 
-      <script src="js/header.js"></script>
+      <script src="/js/header.js"></script>
 </body>
 </html>
