--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -199,6 +199,6 @@
       </div>
     </section>
   </main>
-  <script src="js/admin.js"></script>
+  <script src="/js/admin.js"></script>
 </body>
 </html>
