--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -43,7 +43,7 @@
   
       <!-- REGISTRO E INICIO DE SESIÓN -->
       <div class="login">
-        <a href="/signup" class="login__btn">Registrate</a>
+        <a href="/login/signup" class="login__btn">Registrate</a>
         <a href="/login" class="login__btn login--up">Iniciar sesion</a>
       </div>
     </nav>
@@ -68,12 +68,12 @@
         <!-- MAGO PARA REGISTRARSE -->
         <div class="wizard">    
              <a href="/login" class="wizard__image">
-                 <img src="images/recursos/wizard-icon.png" width="20px" alt="">
+                 <img src="/images/recursos/wizard-icon.png" width="20px" alt="">
              </a>
              <a href="/login" class="wizard__login">
                 <p>Ingresar / </p>
              </a>
-             <a href="/signup" class="wizard__login">
+             <a href="/login/signup" class="wizard__login">
                  <p>Registrarse</p>
              </a>
         </div>
