--- a/views/register.ejs
+++ b/views/register.ejs
@@ -18,7 +18,7 @@
       <!-- IMAGEN DE USUARIO, BARITA -->
       <section class="register-user">    
         <div class="user-image">
-          <img  class= "user-image-item"src="images/recursos/user-img.png"  alt="">
+          <img  class= "user-image-item"src="/images/recursos/user-img.png"  alt="">
         </div>  
         <div class="user-magic-wand">
           <img src="/images/recursos/varita.png" width="15%" alt="">
@@ -32,7 +32,7 @@
       <div class="conteiner-info-user">
         <!-- NOMBRE -->
         <div class="info-user">
-          <img class="user-data-icon user-pocision" height="40px" src="images/recursos/wizard-icon.png" alt="img de mago">
+          <img class="user-data-icon user-pocision" height="40px" src="/images/recursos/wizard-icon.png" alt="img de mago">
           <p>Nombre del Usuario</p>
         </div>
 
@@ -53,7 +53,7 @@
         <!-- NOMBRE -->
         <p class="user-data">
           <label for="name">
-              <img class="user-data-icon user-pocision" height="40px" src="images/recursos/wizard-icon.png" alt="img de mago">
+              <img class="user-data-icon user-pocision" height="40px" src="/images/recursos/wizard-icon.png" alt="img de mago">
           </label>
           <input class = "user-date-inputs" placeholder="Nombre" type="text" name="name" id="name">
           </p>
@@ -89,7 +89,7 @@
          <!-- NACIMIENTO -->
          <p class="user-data ">
           <label for="date">
-              <i class="far fa-calendar user-data-icon "><img class="image-icon" height="18px" src="images/recursos/wizard-icon.png" alt="img de mago"></i>
+              <i class="far fa-calendar user-data-icon "><img class="image-icon" height="18px" src="/images/recursos/wizard-icon.png" alt="img de mago"></i>
           </label>
           <input class ="user-date-inputs-date date-pocision" type="date" name="date" id="date">
           </p>
@@ -113,6 +113,6 @@
   <%- include('./partials/footer') %>
   
   <!-- LINK DEL JS DEL HEADER -->
-  <script src="js/header.js"></script>
+  <script src="/js/header.js"></script>
 </body>
 </html>
