--- a/src/views/products/shoppingCart.ejs
+++ b/src/views/products/shoppingCart.ejs
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="es">
   <!-- HEAD -->
-  <%- include('./partials/head') %>
+  <%- include('../partials/head') %>
 <!-- BODY CON IMAGEN DE FONDO -->
 <body class="background-image">
 <!-- HEADER -->
-<%- include('./partials/header') %> 
+<%- include('../partials/header') %> 
 
     <!-- COMIENZA EL CARRITO -->
 
@@ -99,7 +99,7 @@
 </div>
 
   <!-- FOOTER -->
-  <%- include('./partials/footer') %>
+  <%- include('../partials/footer') %>
 
 <!-- LINK DEL JS DEL HEADER -->
 <script src="js/header.js"></script>
