--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="es">
   <!-- HEAD -->
-  <%- include('./partials/head') %>
+  <%- include('../partials/head') %>
 <!-- BODY CON IMAGEN DE FONDO -->
 <body class="background-image">
 
 <!-- HEADER -->
-<%- include('./partials/header') %> 
+<%- include('../partials/header') %> 
 
    <!-- COMIENZA EL REGITRO DE USUARIO -->
 
@@ -110,7 +110,7 @@
   </main>
 
   <!-- FOOTER -->
-  <%- include('./partials/footer') %>
+  <%- include('../partials/footer') %>
   
   <!-- LINK DEL JS DEL HEADER -->
   <script src="/js/header.js"></script>
