--- a/src/views/admin/admin.ejs
+++ b/src/views/admin/admin.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
     <!-- HEAD -->
-    <%- include('./partials/head') %>
+    <%- include('../partials/head') %>
 <body>
   <!-- HEADER -->
  <header class="header error-bg">
