--- a/src/views/products/novelties.ejs
+++ b/src/views/products/novelties.ejs
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="es">
   <!-- HEAD -->
-  <%- include('./partials/head') %>
+  <%- include('../partials/head') %>
 
 <body>
 <!-- HEADER -->
-<%- include('./partials/header') %> 
+<%- include('../partials/header') %> 
 
 
 
@@ -14,7 +14,7 @@
 
 
 <!-- FOOTER -->
-<%- include('./partials/footer') %>
+<%- include('../partials/footer') %>
 
 <!-- LINK DEL JS DEL HEADER -->
 <script src="js/header.js"></script>
