--- a/src/views/products/productDetail.ejs
+++ b/src/views/products/productDetail.ejs
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="es">
     <!-- HEAD -->
-    <%- include('./partials/head') %>
+    <%- include('../partials/head') %>
   <body>
 <!-- HEADER -->
-<%- include('./partials/header') %> 
+<%- include('../partials/header') %> 
 
     <main class="main">
       <section class="product">
@@ -76,7 +76,7 @@
     </main>
 
   <!-- FOOTER -->
-  <%- include('./partials/footer') %>
+  <%- include('../partials/footer') %>
   
     <script src="js/header.js"></script>
   </body>
