--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="es">
     <!-- HEAD -->
-    <%- include('./partials/head') %>
+    <%- include('../partials/head') %>
   <body>
 <!-- HEADER -->
-<%- include('./partials/header') %> 
+<%- include('../partials/header') %> 
 
     <aside class="aside">
       <figure class="logo-sticker">
@@ -63,7 +63,7 @@
     </aside>
 
    <!-- FOOTER -->
-   <%- include('./partials/footer') %>
+   <%- include('../partials/footer') %>
 
    <script src="/js/header.js"></script>
   </body>
