cambio logo viejo al nuevo en login

--- a/spellBook/src/views/users/login.ejs
+++ b/spellBook/src/views/users/login.ejs
@@ -9,7 +9,7 @@
     <aside class="aside">
       <figure class="logo-sticker">
         <img
-          src="images/Diseño y Logo/Logo para fondos oscuros.png"
+          src="images/Diseño y Logo/Logo-Berkshire.png"
           alt=""
           class="logo-sticker__img"
         />
