--- a/spellBook/public/stylesheets/login.css
+++ b/spellBook/public/stylesheets/login.css
@@ -119,7 +119,10 @@
     box-shadow: 6px 10px 5px rgb(119, 119, 119);
   }
   .logo-sticker {
-    display: block;
+    display: flex;
+    align-items: center;
+    position: relative;
+    height: 100%;
     width: 50%;
   }
   .logo-sticker__img {
