--- a/spellBook/src/views/users/login.ejs
+++ b/spellBook/src/views/users/login.ejs
@@ -8,6 +8,14 @@
 
     <aside class="aside">
       <figure class="logo-sticker">
+        <div class="star star1"></div>
+        <div class="star star2"></div>
+        <div class="star star3"></div>
+        <div class="star star4"></div>
+        <div class="star star5"></div>
+        <div class="star star6"></div>
+        <div class="star star7"></div>
+        <div class="star star8"></div>
         <img
           src="images/Diseño y Logo/Logo-Berkshire.png"
           alt=""
