se agregan efecto hover a los books

--- a/spellBook/src/views/products/shoppingCart.ejs
+++ b/spellBook/src/views/products/shoppingCart.ejs
@@ -73,25 +73,25 @@
        
         <article class="recommended-item">
             <a href="">
-                <img class="recommended-img"src="images/libros/AnimalesFantasticosYDondeEncontrarlos.jpg" alt="">
+                <img class="book-cover recommended-img"src="images/libros/AnimalesFantasticosYDondeEncontrarlos.jpg" alt="">
                 <p>Animales Fantasticos y donde encontrarlos</p>
             </a>    
         </article>
         <article class="recommended-item">
             <a href="">
-                <img class="recommended-img" src="images/libros/ElSeñorDeLosAnillos_LaComunidadDelAnillo.jpg" alt="">
+                <img class="book-cover recommended-img" src="images/libros/ElSeñorDeLosAnillos_LaComunidadDelAnillo.jpg" alt="">
                 <p>El Señor de los anillos La comunidad del Anillo</p>
             </a>
         </article>
         <article class="recommended-item">
             <a href="">
-                <img class="recommended-img" src="images/libros/harry-potter-y-la-camara-secreta.png" alt="">
+                <img class="book-cover recommended-img" src="images/libros/harry-potter-y-la-camara-secreta.png" alt="">
                 <p>Harry Potter y la Camara Secreta</p>
             </a>
         </article>
         <article class="recommended-item">
             <a href="">
-                <img class="recommended-img" src="images/libros/los-crimenes-de-grindelwald.jpg" alt="">
+                <img class="book-cover recommended-img" src="images/libros/los-crimenes-de-grindelwald.jpg" alt="">
                 <p>Los Crimenes de Grindelwald</p>
             </a>
         </article>
