--- a/spellBook/public/stylesheets/styles.css
+++ b/spellBook/public/stylesheets/styles.css
@@ -9,3 +9,23 @@
 @import url('admin.css');
 @import url('404.css'); 
 @import url('register.css');
+
+/* REGLAS GENERALES */
+
+/* EFECTO DE LOS LIBROS */
+.book-cover {
+    box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.4);
+    border-radius: 3px;
+    transition: 0.5s;
+}
+  
+.book-cover:hover{
+  
+  -webkit-transform:scale(1);transform:scale(1.02);
+  transition-property: all;
+  transition-duration: 0.5s;
+  transition-timing-function: ease-in-out;
+  box-shadow: 1em 1em 4rem 0px var(--color-azulOscuro), -1em -1em 4rem 0px var(--color-violeta);
+  cursor: pointer;
+  
+}
