--- a/spellBook/src/views/index.ejs
+++ b/spellBook/src/views/index.ejs
@@ -114,7 +114,7 @@
           <p>1200</p>
         </div>
           <!-- Botón de comprar -->
-          <div class="shopping-btn"><input type="button" value="Comprar"></div>
+          <div><input class="button" type="button" value="Comprar"></div>
         </div>
       </article>
       <!-- LIBRO 2 -->
@@ -128,7 +128,7 @@
             <p>1200</p>
           </div>
           <!-- Botón de comprar -->
-          <div class="shopping-btn"><input type="button" value="Comprar"></div>
+          <div><input class="button" type="button" value="Comprar"></div>
           
         </div>
       </article>
@@ -143,7 +143,7 @@
             <p>1200</p>
           </div>
           <!-- Botón de comprar -->
-          <div class="shopping-btn"><input type="button" value="Comprar"></div>
+          <div><input class="button" type="button" value="Comprar"></div>
           
         </div>
       </article>
@@ -169,7 +169,7 @@
           </div>
 
           <!-- Botón de comprar -->
-          <div class="shopping-btn"><input type="button" value="Comprar"></div>
+          <div><input class="button" type="button" value="Comprar"></div>
         </div>
       </article>
       <!-- LIBRO 2 -->
@@ -183,7 +183,7 @@
             <p>1200</p>
           </div>
           <!-- Botón de comprar -->
-          <div class="shopping-btn"><input type="button" value="Comprar"></div>
+          <div><input class="button"  type="button" value="Comprar"></div>
           
         </div>
       </article>
@@ -199,7 +199,7 @@
           </div>
           
           <!-- Botón de comprar -->
-          <div class="shopping-btn"><input type="button" value="Comprar"></div>
+          <div><input class="button" type="button" value="Comprar"></div>
           
         </div>
       </article>
