--- a/spellBook/src/views/products/shoppingCart.ejs
+++ b/spellBook/src/views/products/shoppingCart.ejs
@@ -60,7 +60,7 @@
             <p>$ 1200</p>
         </div>
         <a href="#" >
-            <button class="to-pay" type="submit">Ir al Pago</button>
+            <button class="to-pay button"  type="submit">Ir al Pago</button>
         </a>
     </section>
 
