--- a/spellBook/src/views/users/login.ejs
+++ b/spellBook/src/views/users/login.ejs
@@ -54,16 +54,16 @@
             Recordarme en este equipo
           </label>
         </div>
-        <button type="submit" value="Enviar" class="btn__send">Iniciar sesion</button>
+        <button type="submit" value="Enviar" class="btn__send button">Iniciar sesion</button>
         <div class="user">
           <a href="" class="enlace_link">¿Olvidate tu contraseña?</a>
           <a href="/signup" class="enlace_link"  >¿No tenes cuenta?</a>
         </div>
         <div class="user social">
-          <a href="" class="social__btn"
+          <a href="" class="social__btn button"
             ><i class="fab fa-google social__icon"></i>GOOGLE</a
           >
-          <a href="" class="social__btn"
+          <a href="" class="social__btn button"
             ><i class="fab fa-facebook-f social__icon"></i>FACEBOOK</a
           >
         </div>
