--- a/spellBook/src/views/users/register.ejs
+++ b/spellBook/src/views/users/register.ejs
@@ -95,7 +95,7 @@
           </p>
       
         <!-- BOTON PARA DE GUARDAR -->
-        <button type="submit" class="btn-save">GUARDAR</button>
+        <button type="submit" class="btn-save button">GUARDAR</button>
       </section>
       <h2 class="title-seccion">Tus ultimas Compras</h2>
 
