--- a/spellBook/src/views/users/signUp.ejs
+++ b/spellBook/src/views/users/signUp.ejs
@@ -48,15 +48,15 @@
             <span class="warning">Las contraseñas no coinciden</span>
           </div>
   
-          <button type="submit" value="Enviar" class="btn__send">Registrate</button>
+          <button type="submit" value="Enviar" class="btn__send button">Registrate</button>
           <div class="terminos">
             <input type="checkbox"/> 
   
             <label for="" >Acepto los terminos  <a href="">Terminos y condiciones </a></label>
           </div>
           <div class="user social">
-            <a href="" class="social__btn"><i class="fab fa-google social__icon"></i>GOOGLE</a>
-            <a href="" class="social__btn"><i class="fab fa-facebook-f social__icon"></i>FACEBOOK</a>
+            <a href="" class="social__btn button"><i class="fab fa-google social__icon"></i>GOOGLE</a>
+            <a href="" class="social__btn button"><i class="fab fa-facebook-f social__icon"></i>FACEBOOK</a>
           </div>
         
           <div class="user">
