se elimino style.css y se borro codigo repetido - falta seguir revisando codigo que se repita

--- a/spellBook/src/views/users/register.ejs
+++ b/spellBook/src/views/users/register.ejs
@@ -2,8 +2,8 @@
 <html lang="es">
   <!-- HEAD -->
   <%- include('../partials/head') %>
-<!-- BODY CON IMAGEN DE FONDO -->
-<body class="background-image">
+<!-- COMIENZA EL BODY -->
+<body>
 
 <!-- HEADER -->
 <%- include('../partials/header') %> 
