--- a/spellBook/public/stylesheets/variables.css
+++ b/spellBook/public/stylesheets/variables.css
@@ -22,16 +22,24 @@
 }
 
 /* REGLAS GENERALES */
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 body {
+    background-color: var(--color-beige);
     font-family: var(--font-roboto);
     font-size: 62.5%;
     color: var(--color-azulOscuro);
-   
   }
-  li {
+
+li {
     list-style-type: none;
-  }
-  a {
+}
+
+a {
     text-decoration: none;
     color: var(--color-azulOscuro);
-  }
+}
