--- a/spellBook/src/views/products/novelties.ejs
+++ b/spellBook/src/views/products/novelties.ejs
@@ -7,79 +7,103 @@
 <!-- HEADER -->
 <%- include('../partials/header') %> 
 <seccion class="conteiner-main">
-  <h1 class="title">Novedades</h1>
-  <hr class="one-line">
+  <div class="nov-title">
+    <h1>Novedades</h1>
+    <hr class="bg-blue">
+  </div>
   <div class="m-1">
-    <h4 class="d-inline">SpellBook</h4><p class="d-inline"> te trae las últimas novedades en libros ...</p>
+    <h4 class="d-inline">SpellBook</h4><p class="d-inline">  te trae las últimas novedades en libros ...</p>
   </div>
   <p class="m-1"> Si estás buscando ultimos lanzamiento de libros estás en el lugar adecuado.</p>
-  <div class="novelities-product">
-    <figure class="books">
-      <img class="books__img book-cover" src="images/libros/AnimalesFantasticosYDondeEncontrarlos.jpg" alt="">
-        <a class="books__title" href="">Autor</a>
+  <div class="nov-product">
+    <figure class="nov-book">
+      <img class="books__img book-cover" src="images/libros/AnimalesFantasticosYDondeEncontrarlos.jpg" alt="">       
     </figure>
-    <div>
-      <p>aca va la descripcion del producto </p>
-      <span>PRECIO</span>
+    <div class="nov-description">
+      <p class="nov-text">Historia de la Saga de Harry Potter y la Primera Que se Representa Oficialmente en los Escenarios. Esta Edición Especial del Texto Teatral Acerca a los Lectores la Continuación del Viaje de Harry Potter, sus Amigos y Familiares, Inmediatamente Después del Estreno Mundial de la Obra en el West End de Londres el 30 de Julio de 2016."</p>
+      <a class="nov-autor" href="">Autor</a>
+      <span class="nov-price">$ PRECIO</span>
     </div>
   </div>
-  <br>
-  <br>
-  <div class="novelities-product">
-    <div>
-      <p>aca va la descripcion del producto </p>
-      <span>PRECIO</span>
+  <div class="nov-product">
+    <div class="nov-description">
+      <p class="nov-text">Historia de la Saga de Harry Potter y la Primera Que se Representa Oficialmente en los Escenarios. Esta Edición Especial del Texto Teatral Acerca a los Lectores la Continuación del Viaje de Harry Potter, sus Amigos y Familiares, Inmediatamente Después del Estreno Mundial de la Obra en el West End de Londres el 30 de Julio de 2016."</p>
+      <a class="nov-autor" href="">Autor</a>
+      <span class="nov-price">$ PRECIO</span>
     </div>
-    <figure class="books">
+    <figure class="nov-book">
       <img class="books__img book-cover" src="images/libros/AnimalesFantasticosYDondeEncontrarlos.jpg" alt="">
-        <a class="books__title" href="">Autor</a>
     </figure>
   </div>
 </seccion>
 <seccion class="conteiner-main">
-  <h1 class="title">Recomendados</h1>
-  <hr class="one-line">
+  <div class="nov-title">
+    <h1>Recomendados</h1>
+    <hr class="bg-blue">
+  </div>
+
   <div class="m-1">
-    <p class="d-inline">Somos fanaticos de la lectura y lo fantastico.. </p>
+    <p>Somos fanaticos de la lectura y lo fantastico.. </p>
   </div>
   <p class="m-1">Por ello te brindamos esta sección que elegimos nosotros mismos para que disfrutes.</p>
-  <div class="novelities-product">
-    <figure class="books">
-      <img class="books__img book-cover" src="images/libros/AnimalesFantasticosYDondeEncontrarlos.jpg" alt="">
-        <a class="books__title" href="">Autor</a>
+  <div class="nov-product">
+    <figure class="nov-book">
+      <img class="books__img book-cover" src="images/libros/AnimalesFantasticosYDondeEncontrarlos.jpg" alt="">       
     </figure>
-    <div>
-      <p>aca va la descripcion del producto </p>
-      <span>PRECIO</span>
+    <div class="nov-description">
+      <p class="nov-text">Historia de la Saga de Harry Potter y la Primera Que se Representa Oficialmente en los Escenarios. Esta Edición Especial del Texto Teatral Acerca a los Lectores la Continuación del Viaje de Harry Potter, sus Amigos y Familiares, Inmediatamente Después del Estreno Mundial de la Obra en el West End de Londres el 30 de Julio de 2016."</p>
+      <a class="nov-autor" href="">Autor</a>
+      <span class="nov-price">$ PRECIO</span>
     </div>
   </div>
- 
-
+  <div class="nov-product">
+    <div class="nov-description">
+      <p class="nov-text">Historia de la Saga de Harry Potter y la Primera Que se Representa Oficialmente en los Escenarios. Esta Edición Especial del Texto Teatral Acerca a los Lectores la Continuación del Viaje de Harry Potter, sus Amigos y Familiares, Inmediatamente Después del Estreno Mundial de la Obra en el West End de Londres el 30 de Julio de 2016."</p>
+      <a class="nov-autor" href="">Autor</a>
+      <span class="nov-price">$ PRECIO</span>
+    </div>
+    <figure class="nov-book">
+      <img class="books__img book-cover" src="images/libros/AnimalesFantasticosYDondeEncontrarlos.jpg" alt="">
+    </figure>
+  </div>
 </seccion>
+
 <seccion class="conteiner-main">
-  <h1 class="title">Los mas Vistos</h1>
-  <hr class="one-line">
+  <div class="nov-title">
+    <h1>Los mas Vistos</h1>
+    <hr class="bg-blue">
+  </div>
+
   <div class="m-1">
-   <p class="d-inline">Tambien queremos mostrarte los MAS BUSCADOS por los amantes de la magia y fantasia.</p>
+   <p>Tambien queremos mostrarte los MAS BUSCADOS por los amantes de la magia y fantasia.</p>
   </div>
   <div  class="m-1">
     <p>Que no te sorprenda que algunos coincidan con la selección de arriba. </p>
     <br>
     <p>Que te pudedo decir...</p>
   </div>
- 
-    <div class="m-1 text-center">
-      <p>TENEMOS BUEN GUSTO!!!!   🤓🤓</p>
-    </div>
-  <div class="novelities-product">
-    <figure class="books">
-      <img class="books__img book-cover" src="images/libros/AnimalesFantasticosYDondeEncontrarlos.jpg" alt="">
-        <a class="books__title" href="">Autor</a>
+  <div class="m-1 text-center">
+    <p>TENEMOS BUEN GUSTO!!!!   🤓🤓</p>
+  </div>
+  <div class="nov-product">
+    <figure class="nov-book">
+      <img class="books__img book-cover" src="images/libros/AnimalesFantasticosYDondeEncontrarlos.jpg" alt="">       
     </figure>
-    <div>
-      <p>aca va la descripcion del producto </p>
-      <span>PRECIO</span>
+    <div class="nov-description">
+      <p class="nov-text">Historia de la Saga de Harry Potter y la Primera Que se Representa Oficialmente en los Escenarios. Esta Edición Especial del Texto Teatral Acerca a los Lectores la Continuación del Viaje de Harry Potter, sus Amigos y Familiares, Inmediatamente Después del Estreno Mundial de la Obra en el West End de Londres el 30 de Julio de 2016."</p>
+      <a class="nov-autor" href="">Autor</a>
+      <span class="nov-price">$ PRECIO</span>
     </div>
+  </div>
+  <div class="nov-product">
+    <div class="nov-description">
+      <p class="nov-text">Historia de la Saga de Harry Potter y la Primera Que se Representa Oficialmente en los Escenarios. Esta Edición Especial del Texto Teatral Acerca a los Lectores la Continuación del Viaje de Harry Potter, sus Amigos y Familiares, Inmediatamente Después del Estreno Mundial de la Obra en el West End de Londres el 30 de Julio de 2016."</p>
+      <a class="nov-autor" href="">Autor</a>
+      <span class="nov-price">$ PRECIO</span>
+    </div>
+    <figure class="nov-book">
+      <img class="books__img book-cover" src="images/libros/AnimalesFantasticosYDondeEncontrarlos.jpg" alt="">
+    </figure>
   </div>
  
 
