vista nosotros terminada y correcion de ruta header

--- a/spellBook/public/stylesheets/styles.css
+++ b/spellBook/public/stylesheets/styles.css
@@ -9,6 +9,7 @@
 @import url('admin.css');
 @import url('404.css'); 
 @import url('register.css');
+@import url('aboutUs.css');
 
 /* REGLAS GENERALES */
 
