--- a/spellBook/src/views/aboutUs.ejs
+++ b/spellBook/src/views/aboutUs.ejs
@@ -8,6 +8,79 @@
 <%- include('./partials/header') %> 
 
 
+<!-- Texto central de la vista -->
+<main class="main-AboutUs">
+
+  <div class="headline">
+    <img class="varita"src="/images/Recursos/varita.png" alt=" imágen de varita mágica">
+    <h1>Sobre Nosotros</h1>
+    </div>
+
+  <div class="text-AboutUs">
+  <p class="AboutUs-p">Somos una empresa familiar fundada en 1950. Inicialmente comercializabamos únicamente libros infantiles y teníamos una sucursal fija en Buenos Aires. Empezamos siendo un equipo de 5 personas, que luego se expandió a 15 y actualmente somos más de 500. <br>
+    <br>
+    Hoy en día nos centramos en hacer mágica la experiencia de compra de nuestros clientes y por eso les acercamos la mayor variedad de libros del género posible, en ediciones de excelente calidad y con los mejores precios. <br>
+    <br>
+    Con el propósito de ampliar nuestro horizonte de mercado, facilidades de compra y servicio, es que empezamos con este proyecto una nueva etapa en nuestra historia, la tienda on line. Como siempre, la premisa es seguir ofreciéndoles el mejor asesoramiento posible, y la atención por la que somos ampliamente reconocidos.
+    Es por acá que queremos llegar a ustedes y acercarles nuestro trabajo diario, nuestro conocimiento y lo que las letras generan: cultura.
+   </p>
+  <img src="/images/Recursos/Magic-book.png" alt="">
+</div>
+
+
+</main>
+
+
+
+<!-- CONTACT US -->
+
+  <form class="contactUs-form">
+    <h2>¡Hablemos!</h2>
+    <p class="p-form" type="Nombre:"><input placeholder="Ingresá tu nombre"></input></p>
+    <p class="p-form" type="E-mail:"><input placeholder="Dejanos tu e-mail"></input></p>
+    <p class="p-form" type="Mensaje:"><input placeholder="¿Qué te gustaría decirnos?"></input></p>
+    <button class="send-button">Enviar</button>
+  </form>
+
+
+
+<!-- Fotos de los magos y los nombres de cada uno de nosotros -->
+<div class="headline">
+  <img class="varita"src="/images/Recursos/varita.png" alt=" imágen de varita mágica">
+  <h1>Equipo de Desarrollo</h1>
+  </div>
+
+<section class="wizards">
+
+  
+  
+  <article class="wizards-Cesar">
+    <a title="GitHub" href="https://github.com/CesarTolaba"><img src="/images/Recursos/magician.png" alt="Imagen mago"></a>
+    <p>César Tolaba</p>
+  </article>
+
+  <article class="wizards-Eli">
+    <a title="GitHub" href="https://github.com/EHortua"><img src="/images/Recursos/witch.png" alt="Imagen Bruja"></a>
+    <p>Elízabeth Hortúa</p>
+  </article>
+
+  <article class="wizards-Maca">
+    <a title="GitHub" href="https://github.com/MacarenaPrz"><img src="/images/Recursos/witch.png" alt="Imagen Bruja"></a>
+    <p>Macarena Pérez</p>
+  </article>
+
+  <article class="wizards-Raul">
+    <a title="GitHub" href="https://github.com/RaulREscobar"><img src="/images/Recursos/magician.png" alt="Imagen mago"></a>
+    <p>Raúl Escobar</p>
+
+  </article>
+
+  
+
+
+
+</section>
+
 
 
 
