--- a/spellBook/src/views/partials/header.ejs
+++ b/spellBook/src/views/partials/header.ejs
@@ -95,7 +95,7 @@
             <a href="#" class="menu__link__desk__desk">Novedades</a>
           </li>
           <li class="menu__items__desk">
-            <a href="#" class="menu__link__desk">Nosotros</a>
+            <a href="/aboutUs" class="menu__link__desk">Nosotros</a>
           </li>
         </ul>
     </nav>
